--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 API_URL= /api/v1
 secret= I-love-my-dog
-CONNECTION_STRING = mongodb+srv://eric2umeh:eric2umeh@cluster0.x1ccn.mongodb.net/easy-shop-native?retryWrites=true&w=majority
+CONNECTION_STRING = mongodb+srv://eric2umeh:eric2umeh@cluster0.fvbxo1r.mongodb.net/easy-shop-native?retryWrites=true&w=majority
