--- a/easy-shop-native/package.json
+++ b/easy-shop-native/package.json
@@ -16,17 +16,32 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
-    "expo": "~49.0.5",
+    "expo": "^44.0.6",
     "expo-image-picker": "^14.3.2",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^3.1.2",
     "mime": "^3.0.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "^3.4.0",
+    "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "^0.19.7"
+    "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "^0.19.7",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^6.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
