--- a/easy-shop-native/package.json
+++ b/easy-shop-native/package.json
@@ -9,21 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
-    "expo": "^44.0.6",
+    "expo": "^49.0.5",
     "expo-image-picker": "^14.3.2",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^3.1.2",
     "mime": "^3.0.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "^0.72.3",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.4.0",
